# SMiPoly

./: .buildinfo  .gitignore  1_Installing_SMiPoly.html  2_Getting_start.html  3_Modlues_Overview.html  3_Modules_Overview.html  41_MonomerDefiner.html  42_Ps_rxnL.html  43_Ps_GenL.html  4_utilities.html  5_Directory_config.html  5_Postface.html  6_Postface.html  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  smipoly.html  smipoly.smip.funclib.html  smipoly.smip.html  smipoly.smip.monc.html  smipoly.smip.polg.html
_sources/: 1_Installing_SMiPoly.md.txt  2_Getting_start.md.txt  3_Modules_Overview.md.txt  42_Ps_rxnL.md.txt  4_utilities.md.txt  5_Postface.md.txt  index.rst.txt  modules.rst.txt  smipoly.smip.monc.rst.txt
_static/: documentation_options.js
docs/: .buildinfo  1_About_SMiPoly.html  1_Current_version.html  1_Installing_SMiPoly.html  2_Current_version.html  2_Getting_start.html  2_Installing_SMiPoly.html  3_Getting_start.html  3_Installing_SMiPoly.html  3_Modlues_Overview.html  3_Modlues_Overview.md  41_MonomerDefiner.html  42_Ps_rxnL.html  43_Ps_GenL.md  4_Getting_start.html  4_Modlues_Overview.html  51_MonomerDefiner.html  52_Ps_rxnL.html  53_Ps_GenL.html  5_Directory_config.html  5_Directory_config.md  5_Modlues_Overview.html  5_utilities.html  61_MonomerDefiner.html  62_Ps_rxnL.html  63_Ps_GenL.html  6_Directory_config.html  6_utilities.html  Getting start.html  Installing SMiPoly.html  Installing SMiPoly.md  about SMiPoly.html  genindex.html  index.html  index.rst  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  (+5 more)
docs/.doctrees/: 1_About_SMiPoly.doctree  1_Current_version.doctree  1_Installing_SMiPoly.doctree  2_Current_version.doctree  2_Getting_start.doctree  2_Installing_SMiPoly.doctree  3_Getting_start.doctree  3_Installing_SMiPoly.doctree  3_Modlues_Overview.doctree  41_MonomerDefiner.doctree  42_Ps_rxnL.doctree  43_Ps_GenL.doctree  (+25 more)
docs_src/: 2_Current_version.md  2_Installing_SMiPoly.md  3_Getting_start.md  4_Modlues_Overview.md  51_MonomerDefiner.md  5_utilities.md  63_Ps_GenL.md  6_Directory_config.md  6_utilities.md  about SMiPoly.md  conf.py  index.rst
gh-pages/: 1_Installing_SMiPoly.html  2_Getting_start.html  3_Modlues_Overview.html  41_MonomerDefiner.html  42_Ps_rxnL.html  43_Ps_GenL.html  4_utilities.html  5_Directory_config.html  6_Postface.html  index.html  modules.html  searchindex.js  smipoly.html  smipoly.smip.funclib.html  smipoly.smip.html  smipoly.smip.monc.html  smipoly.smip.polg.html
sample_data/: 202207_smip_monset.csv  tutoral_aziridine.csv  tutorial_aziridine.csv
sample_script/: sample_smip_demo.ipynb  sample_smip_demo2.ipynb  sample_smip_demo3.ipynb  sample_smip_demo4.ipynb
smipoly/: _version.py
utilities/: 1_MonomerDefiner.ipynb  2_Ps_rxnL.ipynb  3_Ps_GenL.ipynb  markushy.py
(+87 files in other folders)
