[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "smipoly"
dynamic = ["version"]
authors = [
  { name = "Mitsuru Ohno", email = "pejpohn@gmail.com" },
]
description = "rule-based virtual polymer library generator"
readme = "README.md"
requires-python = ">=3.10,<3.15"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
]
license = { text = "BSD 3-Clause License" }
dependencies = [
  "rdkit >= 2023.9.1",
  "numpy >= 1.26.0",
  "pandas >= 2.1.0",
]

[project.urls]
Homepage = "https://github.com/PEJpOhno/SMiPoly"
Issues = "https://github.com/PEJpOhno/SMiPoly/issues"

[tool.hatch.version]
path = "src/smipoly/_version.py"
pattern = '__version__ = "(?P<version>.*)"'

[tool.hatch.build.targets.wheel]
sources = ["src"]
packages = ["src/smipoly"]
shared-data = { "smipoly/rules" = "smipoly/rules" }

