#!/usr/bin/env python
# coding: utf-8

[metadata]
name = smipoly
version = attr: smipoly._version.__version__
url = https://github.com/PEJpOhno/SMiPoly
author = Mitsuru Ohno
author_email = pejpohn@gmail.com
description = rule-based virtual polymer library generator
long_description = file: README.md,
keywords = rdkit, polymer,
license = BSD 3-Clause License
license_files = file: LICENSE,
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Chemistry

[options]
zip_safe = False
include_package_data = True
packages =
    smipoly
    smipoly.smip
python_requires = >=3.7
install_requires =
    rdkit >= 2020.09.1.0
    numpy >= 1.20.2
    pandas >= 1.2.4

[options.package_data]
smipoly =
    rules/*.json
    rules/*.pkl
