#!/usr/bin/env python
# coding: utf-8

[metadata]
name = smipoly
version = attr: smipoly._version.__version__
url = https://github.com/PEJpOhno/SMiPoly
author = Mitsuru Ohno
author_email = pejpohn@gmail.com
description = rule-based virtual polymer library generator
long_description = file: README.md,
long_description_content_type = text/markdown
keywords = rdkit, polymer,
license = BSD 3-Clause License
license_files = file: LICENSE,
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Chemistry

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
package_dir =
    = src
python_requires = <3.14,>=3.9
install_requires =
    rdkit >= 2023.9.1
    numpy >= 1.26.0
    pandas >= 2.1.0

[options.packages.find]
where = src

[options.package_data]
smipoly =
    rules/*.json
    rules/*.pkl
